tests/baselines/reference/inlineJsxAndJsxFragPragma.errors.txt
preacty-no-fragment.tsx(5,12): error TS6133: 'Fragment' is declared but its value is never read.
preacty-only-fragment-no-jsx.tsx(6,1): error TS2874: This JSX tag requires 'h' to be in scope, but it could not be found.
snabbdomy-only-fragment-no-jsx.tsx(4,1): error TS2874: This JSX tag requires 'jsx' to be in scope, but it could not be found.


==== renderer.d.ts (0 errors) ====
    declare global {
        namespace JSX {
            interface IntrinsicElements {
                [e: string]: any;
            }
        }
    }
    export function h(): void;
    export function jsx(): void;
    export function Fragment(): void;
    
==== preacty.tsx (0 errors) ====
    /**
     * @jsx h
     * @jsxFrag Fragment
     */
    import {h, Fragment} from "./renderer";
    <><div></div></>
    
==== snabbdomy.tsx (0 errors) ====
    /* @jsx jsx */
    /* @jsxfrag null */
    import {jsx} from "./renderer";
    <><span></span></>
    
==== preacty-only-fragment.tsx (0 errors) ====
    /**
     * @jsx h
     * @jsxFrag Fragment
     */
    import {h, Fragment} from "./renderer";
    <></>
    
==== snabbdomy-only-fragment.tsx (0 errors) ====
    /* @jsx jsx */
    /* @jsxfrag null */
    import {jsx} from "./renderer";
    <></>
    
==== preacty-only-fragment-no-jsx.tsx (1 errors) ====
    /**
     * @jsx h
     * @jsxFrag Fragment
     */
    import {Fragment} from "./renderer";
    <></>
    ~~
!!! error TS2874: This JSX tag requires 'h' to be in scope, but it could not be found.
    
==== snabbdomy-only-fragment-no-jsx.tsx (1 errors) ====
    /* @jsx jsx */
    /* @jsxfrag null */
    import {} from "./renderer";
    <></>
    ~~
!!! error TS2874: This JSX tag requires 'jsx' to be in scope, but it could not be found.
    
==== preacty-no-fragment.tsx (1 errors) ====
    /**
     * @jsx h
     * @jsxFrag Fragment
     */
    import {h, Fragment} from "./renderer";
               ~~~~~~~~
!!! error TS6133: 'Fragment' is declared but its value is never read.
    <div></div>
    
==== snabbdomy-no-fragment.tsx (0 errors) ====
    /* @jsx jsx */
    /* @jsxfrag null */
    import {jsx} from "./renderer";
    <div></div>
    
==== preacty-only-component.tsx (0 errors) ====
    /**
     * @jsx h
     */
    import {h} from "./renderer";
    function Component() { return null; }
    <Component />
    